// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Flex snapshots align 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

<div
    class="c0"
  >
    My Text
  </div>
</DocumentFragment>
`;

exports[`Flex snapshots center 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: start;
  justify-content: center;
}

<div
    class="c0"
  >
    My Text
  </div>
</DocumentFragment>
`;

exports[`Flex snapshots wide 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: start;
  width: 100%;
}

<div
    class="c0"
  >
    My Text
  </div>
</DocumentFragment>
`;

exports[`Flex snapshots wide center align 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: center;
}

<div
    class="c0"
  >
    My Text
  </div>
</DocumentFragment>
`;
